feat: add Comick chapter aggregator
